--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -1,3 +1,19 @@
-<p>
-  table works!
-</p>
+<table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+
+  <!-- Name Column -->
+  <ng-container matColumnDef="name">
+    <th mat-header-cell class="cell_name" *matHeaderCellDef>Name</th>
+    <td mat-cell *matCellDef="let element">{{element.name}}</td>
+  </ng-container>
+
+  <!-- Score Columns -->
+  <ng-container matColumnDef="{{column}}" *ngFor="let column of dataHeader">
+    <th mat-header-cell class="cell_content" *matHeaderCellDef>{{column}}</th>
+    <td mat-cell *matCellDef="let element"> {{element[column]}}</td>
+  </ng-container>
+
+  <tr mat-header-row *matHeaderRowDef="headers"></tr>
+  <tr mat-row *matRowDef="let element; columns: headers;"
+      class="example-element-row">
+  </tr>
+</table>
