--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -21,30 +21,30 @@
   </ng-container>
 
   <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-  <ng-container matColumnDef="expandedDetail">
-    <td mat-cell *matCellDef="let element" [attr.colspan]="headers.length"
-        class="zero2three">
-      <div class="example-element-detail"
-           [@detailExpand]="element['expand'] ? 'expanded' : 'collapsed'">
-        <table>
-          <tbody>
-            <tr style="background-color: white; text-align: center">
-              <td style="width:40px"></td>
-              <td style="width:180px">{{element.name}}</td>
-              <td style="width:58px" *ngFor="let column of dataHeader">{{element[column]}}</td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-    </td>
-  </ng-container>
+  <!--<ng-container matColumnDef="expandedDetail">-->
+    <!--<td mat-cell *matCellDef="let element" [attr.colspan]="headers.length"-->
+        <!--class="zero2three">-->
+      <!--<div class="example-element-detail"-->
+           <!--[@detailExpand]="element['expand'] ? 'expanded' : 'collapsed'">-->
+        <!--<table>-->
+          <!--<tbody>-->
+            <!--<tr style="background-color: white; text-align: center">-->
+              <!--<td style="width:40px"></td>-->
+              <!--<td style="width:180px">{{element.name}}</td>-->
+              <!--<td style="width:58px" *ngFor="let column of dataHeader">{{element[column]}}</td>-->
+            <!--</tr>-->
+          <!--</tbody>-->
+        <!--</table>-->
+      <!--</div>-->
+    <!--</td>-->
+  <!--</ng-container>-->
 
   <tr mat-header-row *matHeaderRowDef="headers"></tr>
-  <tr mat-row *matRowDef="let element; let i = dataIndex; columns: headers; when: isParentRow"
+  <tr mat-row *matRowDef="let element; let i = index; columns: headers"
       class="example-element-row"
       [class.example-expanded-row]="expandedElement === element"
-      (click)="element['expand'] = !element['expand']; updateChildRow(i, element)">
+      (click)="element['expand'] = !element['expand']; updateChildExpand(i, element)">
   </tr>
-  <tr mat-row *matRowDef="let element; columns: ['expandedDetail'];  when: isChildRow"
-      class="example-detail-row"></tr>
+  <!--<tr mat-row *matRowDef="let element; columns: ['expandedDetail'];  when: isChildRow"-->
+      <!--class="example-detail-row"></tr>-->
 </table>
