--- a/src/app/table/table.component.html
+++ b/src/app/table/table.component.html
@@ -3,8 +3,10 @@
   <ng-container matColumnDef="expand">
     <th mat-header-cell class="cell_expand" *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element" class="cell_content" >
-      <span *ngIf="element['expand'] && !element['parent']">-</span>
-      <span *ngIf="!element['expand'] && !element['parent']">+</span>
+      <span *ngIf="element['expand'] && !element['parent']">-&nbsp;&nbsp;</span>
+      <span *ngIf="!element['expand'] && !element['parent']">+&nbsp;&nbsp;</span>
+      <span *ngIf="element['expand'] && element['parent']">&nbsp;&nbsp;-</span>
+      <span *ngIf="!element['expand'] && element['parent']">&nbsp;&nbsp;+</span>
     </td>
   </ng-container>
 
@@ -21,30 +23,28 @@
   </ng-container>
 
   <!-- Expanded Content Column - The detail row is made up of this one column that spans across all columns -->
-  <!--<ng-container matColumnDef="expandedDetail">-->
-    <!--<td mat-cell *matCellDef="let element" [attr.colspan]="headers.length"-->
-        <!--class="zero2three">-->
-      <!--<div class="example-element-detail"-->
-           <!--[@detailExpand]="element['expand'] ? 'expanded' : 'collapsed'">-->
-        <!--<table>-->
-          <!--<tbody>-->
-            <!--<tr style="background-color: white; text-align: center">-->
-              <!--<td style="width:40px"></td>-->
-              <!--<td style="width:180px">{{element.name}}</td>-->
-              <!--<td style="width:58px" *ngFor="let column of dataHeader">{{element[column]}}</td>-->
-            <!--</tr>-->
-          <!--</tbody>-->
-        <!--</table>-->
-      <!--</div>-->
-    <!--</td>-->
-  <!--</ng-container>-->
+  <ng-container matColumnDef="expandedDetail">
+    <td mat-cell *matCellDef="let element" [attr.colspan]="headers.length" class="zero2three">
+      <div class="example-element-detail"
+           [@detailExpand]="element['expand'] ? 'expanded' : 'collapsed'">
+        <div class='gia-chart-wrapper' style="width: 720px; height: 360px; float: left;">
+          <div class="gia-chart-{{element['position']}}"></div>
+        </div>
+      </div>
+    </td>
+  </ng-container>
 
   <tr mat-header-row *matHeaderRowDef="headers"></tr>
-  <tr mat-row *matRowDef="let element; let i = index; columns: headers"
+  <tr mat-row *matRowDef="let element; let i = index; columns: headers; when: isParentRow"
       class="example-element-row"
-      [class.example-expanded-row]="expandedElement === element"
       (click)="element['expand'] = !element['expand']; updateChildExpand(i, element)">
   </tr>
-  <!--<tr mat-row *matRowDef="let element; columns: ['expandedDetail'];  when: isChildRow"-->
-      <!--class="example-detail-row"></tr>-->
+  <tr mat-row *matRowDef="let element; columns: headers;  when: isChildRow"
+      class="example-element-row-child"
+      [class.example-expanded-row]="expandedElement === element"
+      (click)="element['expand'] = !element['expand']; updateDetailGraph(element)">
+  </tr>
+  <tr mat-row *matRowDef="let element; columns: ['expandedDetail'];"
+      class="example-detail-row">
+  </tr>
 </table>
