--- a/src/app/table/table.component.scss
+++ b/src/app/table/table.component.scss
@@ -13,12 +13,36 @@
   text-align: center;
 }
 
+tr.example-detail-row {
+  height: 0;
+}
+
+tr.example-element-row-child:not(.example-expanded-row):hover {
+  background: #f5f5f5;
+}
+
+tr.example-element-row-child:not(.example-expanded-row):active {
+  background: #efefef;
+}
+
 .example-element-row td {
   border-bottom-width: 0.5px;
   text-align: center;
 }
 
-tr.example-detail-row {
-  height: 0;
+.example-element-row-child td {
+  border-bottom-width: 0.5px;
+  text-align: center;
+  background-color: white;
 }
 
+.example-element-detail {
+  overflow: hidden;
+  display: flex;
+}
+
+.gia-chart-wrapper {
+  max-width: 720px;
+  margin: 0 0 0 200px;
+  background-color: white;
+}
